# test1

code/: CMakeLists.txt
code/include/: BVH.hpp  Bounds3.hpp  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Renderer.hpp  Scene.hpp  global.hpp  object3d.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  triangle.hpp
code/src/: BVH.cpp  Renderer.cpp  Scene.cpp  main.cpp
